fix: 修复学生成果页乱码并收口系统设置与论文依赖
- 修复学生端 Achievements 页面中文文本编码损坏，恢复页面文案显示\n- 收口学生结果页与系统设置页的前后端字段口径，移除奖项配置 version 前端依赖并统一读取生效配置\n- 调整 ResearchPaperServiceImpl 对学生信息的读取方式，消除与 StudentInfoServiceImpl 的循环依赖\n- 补充数据库联审第二轮的审计、归档准备与 review_record 收口 SQL 脚本