@@ -8,9 +8,9 @@ import com.scholarship.common.exception.BusinessException;
 import com.scholarship.entity.ResearchPaper;
 import com.scholarship.entity.StudentInfo;
 import com.scholarship.mapper.ResearchPaperMapper;
+import com.scholarship.mapper.StudentInfoMapper;
 import com.scholarship.security.LoginUser;
 import com.scholarship.service.ResearchPaperService;
-import com.scholarship.service.StudentInfoService;
 import com.scholarship.vo.ResearchPaperVO;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -18,42 +18,35 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
-/**
- * 科研论文服务实现类
- *
- * @author Scholarship Development Team
- * @version 1.0.0
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, ResearchPaper> implements ResearchPaperService {
 
     private final ResearchPaperMapper researchPaperMapper;
-    private final StudentInfoService studentInfoService;
+    private final StudentInfoMapper studentInfoMapper;
 
     @Override
     public IPage<ResearchPaper> pagePapers(Long current, Long size, Long studentId, Integer status) {
         Page<ResearchPaper> page = new Page<>(current, size);
-
         LambdaQueryWrapper<ResearchPaper> wrapper = new LambdaQueryWrapper<>();
 
         if (studentId != null) {
             wrapper.eq(ResearchPaper::getStudentId, studentId);
         }
-
         if (status != null) {
             wrapper.eq(ResearchPaper::getStatus, status);
         }
 
         wrapper.orderByDesc(ResearchPaper::getPublicationDate);
-
         return researchPaperMapper.selectPage(page, wrapper);
     }
 
@@ -62,53 +55,35 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
         Page<ResearchPaper> page = new Page<>(current, size);
         LambdaQueryWrapper<ResearchPaper> wrapper = new LambdaQueryWrapper<>();
 
-        // 根据用户类型过滤数据
         if (loginUser != null) {
             if (loginUser.getUserType() == 1) {
-                // 学生用户只能看到自己的论文
-                StudentInfo currentStudent = studentInfoService.getByUserId(loginUser.getUserId());
+                StudentInfo currentStudent = findStudentByUserId(loginUser.getUserId());
                 if (currentStudent == null) {
-                    Page<ResearchPaper> emptyPage = new Page<>(current, size, 0);
-                    return convertToVOPage(emptyPage, new ArrayList<>());
+                    return convertToVOPage(new Page<>(current, size, 0), List.of());
                 }
                 wrapper.eq(ResearchPaper::getStudentId, currentStudent.getId());
             } else if (loginUser.getUserType() == 2) {
-                // 导师用户可以看到所指导学生的论文
-                List<StudentInfo> students = studentInfoService.list(new LambdaQueryWrapper<StudentInfo>()
-                    .eq(StudentInfo::getTutorId, loginUser.getUserId()));
-                List<Long> studentIds = students.stream()
-                    .map(StudentInfo::getId)
-                    .collect(Collectors.toList());
-                if (studentIds.isEmpty()) {
-                    // 如果没有指导学生，返回空结果
-                    Page<ResearchPaper> emptyPage = new Page<>(current, size, 0);
-                    return convertToVOPage(emptyPage, new ArrayList<>());
+                List<StudentInfo> students = listStudentsByTutorId(loginUser.getUserId());
+                List<Long> tutorStudentIds = students.stream().map(StudentInfo::getId).toList();
+                if (tutorStudentIds.isEmpty()) {
+                    return convertToVOPage(new Page<>(current, size, 0), List.of());
                 }
-                wrapper.in(ResearchPaper::getStudentId, studentIds);
+                wrapper.in(ResearchPaper::getStudentId, tutorStudentIds);
             }
-            // 管理员可以看到所有论文
         }
 
-        // 关键词搜索（学生姓名或学号）
         if (StringUtils.hasText(keyword)) {
-            List<StudentInfo> students = studentInfoService.list(new LambdaQueryWrapper<StudentInfo>()
-                .and(w -> w.like(StringUtils.hasText(keyword), StudentInfo::getStudentNo, keyword)
-                    .or()
-                    .like(StringUtils.hasText(keyword), StudentInfo::getName, keyword)));
-            List<Long> studentIds = students.stream()
-                .map(StudentInfo::getId)
-                .collect(Collectors.toList());
-            if (studentIds.isEmpty()) {
-                Page<ResearchPaper> emptyPage = new Page<>(current, size, 0);
-                return convertToVOPage(emptyPage, new ArrayList<>());
+            List<StudentInfo> students = listStudentsByKeyword(keyword);
+            List<Long> keywordStudentIds = students.stream().map(StudentInfo::getId).toList();
+            if (keywordStudentIds.isEmpty()) {
+                return convertToVOPage(new Page<>(current, size, 0), List.of());
             }
-            wrapper.in(ResearchPaper::getStudentId, studentIds);
+            wrapper.in(ResearchPaper::getStudentId, keywordStudentIds);
         }
 
         if (studentId != null) {
             wrapper.eq(ResearchPaper::getStudentId, studentId);
         }
-
         if (status != null) {
             wrapper.eq(ResearchPaper::getStatus, status);
         }
@@ -116,31 +91,22 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
         wrapper.orderByDesc(ResearchPaper::getCreateTime);
 
         Page<ResearchPaper> paperPage = researchPaperMapper.selectPage(page, wrapper);
+        List<Long> studentIds = paperPage.getRecords().stream()
+                .map(ResearchPaper::getStudentId)
+                .distinct()
+                .toList();
 
-        // 获取学生信息并转换为 VO
-        List<ResearchPaper> papers = paperPage.getRecords();
-        List<Long> studentIds = papers.stream()
-            .map(ResearchPaper::getStudentId)
-            .distinct()
-            .collect(Collectors.toList());
-
-        List<StudentInfo> students = new ArrayList<>();
-        if (!studentIds.isEmpty()) {
-            students = studentInfoService.list(new LambdaQueryWrapper<StudentInfo>()
-                .in(StudentInfo::getId, studentIds));
-        }
+        List<StudentInfo> students = studentIds.isEmpty()
+                ? List.of()
+                : new ArrayList<>(mapStudentsByIds(studentIds).values());
 
         return convertToVOPage(paperPage, students);
     }
 
-    /**
-     * 将 ResearchPaper 分页结果转换为 ResearchPaperVO 分页结果
-     */
     private Page<ResearchPaperVO> convertToVOPage(Page<ResearchPaper> paperPage, List<StudentInfo> students) {
         Page<ResearchPaperVO> voPage = new Page<>(paperPage.getCurrent(), paperPage.getSize(), paperPage.getTotal());
-
         Map<Long, StudentInfo> studentMap = students.stream()
-            .collect(Collectors.toMap(StudentInfo::getId, s -> s));
+                .collect(Collectors.toMap(StudentInfo::getId, Function.identity(), (a, b) -> a));
 
         List<ResearchPaperVO> voList = new ArrayList<>();
         for (ResearchPaper paper : paperPage.getRecords()) {
@@ -148,31 +114,25 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
             vo.setId(paper.getId());
             vo.setStudentId(paper.getStudentId());
 
-            // 设置学生信息
             StudentInfo student = studentMap.get(paper.getStudentId());
             if (student != null) {
                 vo.setStudentNo(student.getStudentNo());
                 vo.setStudentName(student.getName());
             }
 
-            // 固定类型为 paper
             vo.setType("paper");
-
-            // 论文标题映射为成果名称
             vo.setTitle(paper.getPaperTitle());
             vo.setPaperTitle(paper.getPaperTitle());
             vo.setJournalName(paper.getJournalName());
             vo.setJournalLevel(paper.getJournalLevel());
             vo.setImpactFactor(paper.getImpactFactor());
 
-            // 期刊级别映射为级别文本
             if (paper.getJournalLevel() != null) {
                 String[] levels = {"", "SCI 一区", "SCI 二区", "SCI 三区", "SCI 四区", "EI", "核心期刊", "普通期刊"};
                 vo.setLevel(paper.getJournalLevel() >= 1 && paper.getJournalLevel() <= 7 ? levels[paper.getJournalLevel()] : "");
             }
 
-            // 影响因子映射为分值
-            vo.setScore(paper.getImpactFactor() != null ? paper.getImpactFactor() : java.math.BigDecimal.ZERO);
+            vo.setScore(paper.getImpactFactor() != null ? paper.getImpactFactor() : BigDecimal.ZERO);
             vo.setAuthors(paper.getAuthors());
             vo.setAuthorRank(paper.getAuthorRank());
             vo.setDate(paper.getPublicationDate());
@@ -183,7 +143,6 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
             vo.setReviewerId(paper.getReviewerId());
             vo.setReviewTime(paper.getReviewTime());
             vo.setCreateTime(paper.getCreateTime());
-
             voList.add(vo);
         }
 
@@ -194,14 +153,13 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
     @Override
     @Transactional(rollbackFor = Exception.class)
     public boolean submitPaper(ResearchPaper paper, Long studentId) {
-        // 设置学生 ID
-        StudentInfo studentInfo = studentInfoService.getByUserId(studentId);
+        StudentInfo studentInfo = findStudentByUserId(studentId);
         if (studentInfo == null) {
-            throw new BusinessException("瀛︾敓淇℃伅涓嶅瓨鍦?");
+            throw new BusinessException("学生信息不存在");
         }
 
         paper.setStudentId(studentInfo.getId());
-        paper.setStatus(0); // 待审核
+        paper.setStatus(0);
         paper.setCreateTime(LocalDateTime.now());
         return researchPaperMapper.insert(paper) > 0;
     }
@@ -211,20 +169,20 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
     public boolean updatePaper(Long paperId, ResearchPaper paper, Long userId) {
         ResearchPaper existingPaper = researchPaperMapper.selectById(paperId);
         if (existingPaper == null) {
-            throw new BusinessException("璁烘枃涓嶅瓨鍦?");
+            throw new BusinessException("论文不存在");
         }
 
-        StudentInfo currentStudent = studentInfoService.getByUserId(userId);
+        StudentInfo currentStudent = findStudentByUserId(userId);
         if (currentStudent == null) {
-            throw new BusinessException("瀛︾敓淇℃伅涓嶅瓨鍦?");
+            throw new BusinessException("学生信息不存在");
         }
 
         if (!existingPaper.getStudentId().equals(currentStudent.getId())) {
-            throw new BusinessException("鏃犳潈缂栬緫璇ヨ鏂?");
+            throw new BusinessException("无权编辑该论文");
         }
 
         if (existingPaper.getStatus() != 0) {
-            throw new BusinessException("褰撳墠璁烘枃鐘舵€佷笉鍏佽缂栬緫");
+            throw new BusinessException("仅待审核论文允许编辑");
         }
 
         existingPaper.setPaperTitle(paper.getPaperTitle());
@@ -253,25 +211,20 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
             throw new BusinessException("论文不存在");
         }
 
-        // 获取论文作者（学生）的导师 ID
-        StudentInfo student = studentInfoService.getById(paper.getStudentId());
+        StudentInfo student = studentInfoMapper.selectById(paper.getStudentId());
         if (student == null) {
             throw new BusinessException("学生信息不存在");
         }
 
-        // 如果学生有导师，验证当前审核人是否为该导师
-        if (!isAdmin && student.getTutorId() != null) {
-            if (!student.getTutorId().equals(reviewerId)) {
-                log.warn("审核人 {} 尝试审核不属于她指导的学生的论文 {}", reviewerId, paperId);
-                throw new BusinessException("无权审核该论文，只能审核自己指导学生的论文");
-            }
+        if (!isAdmin && student.getTutorId() != null && !student.getTutorId().equals(reviewerId)) {
+            log.warn("审核人 {} 尝试审核不属于自己指导学生的论文 {}", reviewerId, paperId);
+            throw new BusinessException("无权审核该论文，只能审核自己指导学生的论文");
         }
 
         paper.setStatus(status);
         paper.setReviewComment(reviewComment);
         paper.setReviewerId(reviewerId);
         paper.setReviewTime(LocalDateTime.now());
-
         return researchPaperMapper.updateById(paper) > 0;
     }
 
@@ -282,11 +235,10 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
         }
 
         List<ResearchPaper> papers = list(new LambdaQueryWrapper<ResearchPaper>()
-            .in(ResearchPaper::getStudentId, studentIds)
-            .eq(ResearchPaper::getStatus, 1)); // 导师审核通过
+                .in(ResearchPaper::getStudentId, studentIds)
+                .eq(ResearchPaper::getStatus, 1));
 
-        return papers.stream()
-            .collect(Collectors.groupingBy(ResearchPaper::getStudentId));
+        return papers.stream().collect(Collectors.groupingBy(ResearchPaper::getStudentId));
     }
 
     @Override
@@ -296,28 +248,55 @@ public class ResearchPaperServiceImpl extends ServiceImpl<ResearchPaperMapper, R
 
         ResearchPaper paper = researchPaperMapper.selectById(id);
         if (paper == null) {
-            throw new com.scholarship.exception.BusinessException("论文不存在");
+            throw new BusinessException("论文不存在");
         }
 
-        // 权限验证：只有论文所有者或管理员可以删除
         Long currentStudentId = currentUserId;
         if (!isAdmin) {
-            StudentInfo currentStudent = studentInfoService.getByUserId(currentUserId);
+            StudentInfo currentStudent = findStudentByUserId(currentUserId);
             if (currentStudent == null) {
-                throw new com.scholarship.exception.BusinessException("学生信息不存在");
+                throw new BusinessException("学生信息不存在");
             }
             currentStudentId = currentStudent.getId();
         }
 
         if (!paper.getStudentId().equals(currentStudentId) && !isAdmin) {
-            throw new com.scholarship.exception.BusinessException("无权限删除该论文");
+            throw new BusinessException("无权限删除该论文");
         }
 
-        // 状态检查：只有草稿状态（status=0）的论文可以删除
         if (paper.getStatus() != 0) {
-            throw new com.scholarship.exception.BusinessException("已提交的论文不能删除");
+            throw new BusinessException("已提交的论文不能删除");
         }
 
         return removeById(id);
+    }
+
+    private StudentInfo findStudentByUserId(Long userId) {
+        return studentInfoMapper.selectOne(new LambdaQueryWrapper<StudentInfo>()
+                .eq(StudentInfo::getUserId, userId)
+                .last("limit 1"));
+    }
+
+    private List<StudentInfo> listStudentsByTutorId(Long tutorUserId) {
+        return studentInfoMapper.selectList(new LambdaQueryWrapper<StudentInfo>()
+                .eq(StudentInfo::getTutorId, tutorUserId));
+    }
+
+    private List<StudentInfo> listStudentsByKeyword(String keyword) {
+        return studentInfoMapper.selectList(new LambdaQueryWrapper<StudentInfo>()
+                .and(w -> w.like(StudentInfo::getStudentNo, keyword)
+                        .or()
+                        .like(StudentInfo::getName, keyword)));
+    }
+
+    private Map<Long, StudentInfo> mapStudentsByIds(List<Long> ids) {
+        if (ids == null || ids.isEmpty()) {
+            return Map.of();
+        }
+
+        return studentInfoMapper.selectList(new LambdaQueryWrapper<StudentInfo>()
+                        .in(StudentInfo::getId, ids))
+                .stream()
+                .collect(Collectors.toMap(StudentInfo::getId, Function.identity(), (a, b) -> a));
     }
 }
